--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,1 +1,6 @@
 image: gitpod/workspace-dotnet
+
+vscode:
+  extensions:
+    - ms-vscode.csharp@1.21.12:kw8SkO8+aVTSFug281WfQQ==
+    - Ionide.Ionide-fsharp@4.6.2:yBkAE6j7z7gJ5WEcyMjEOg==
